--- a/www/package.json
+++ b/www/package.json
@@ -15,5 +15,11 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "jquery": "^1.11.2",
+    "jquery-input-mask-phone-number": "^1.0.14"
   }
 }
