--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 PROTOCOL=http
-DEV_DOMAIN=localhost:5000
+DEV_DOMAIN=localhost:8000
 DB_DRIVER=mysql
 DB_HOSTNAME=localhost
 DB_PORT=3306
-DB_NAME=database_name
+DB_NAME=foo
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=password
